--- a/localisation/India.csv
+++ b/localisation/India.csv
@@ -14,7 +14,7 @@ PROV1122;优陀耶耆厘;;;;;;;;;;x
 PROV1123;瓶耆罗;;;;;;;;;;x
 PROV1124;胡奴梨;;;;;;;;;;x
 PROV1125;檀那;;;;;;;;;;x
-PROV1126;昙门;;;;;;;;;;x
+PROV1126;达曼;;;;;;;;;;x
 PROV1127;那婆萨利迦;;;;;;;;;;x
 PROV1128;毗娑迦波多那;;;;;;;;;;x
 PROV1129;伽多迦;;;;;;;;;;x
@@ -281,7 +281,7 @@ PROV1425;伊犁;;;;;;;;;;x
 PROV1426;七河;;;;;;;;;;x
 PROV1427;乌尔札尔;;;;;;;;;;x
 PROV1428;达莫特;;;;;;;;;;x
-PROV1429;比札姆德尔;;;;;;;;;;x
+PROV1429;贝格姆德尔;;;;;;;;;;x
 PROV1430;钦察;;;;;;;;;;x
 PROV1431;讹答剌;;;;;;;;;;x
 PROV1432;葛罗逯;;;;;;;;;;x
@@ -303,8 +303,8 @@ c_assab;阿萨布;;;;;;;;;;x
 c_assab_adj;阿萨布;;;;;;;;;;x
 c_asayita;阿萨伊塔;;;;;;;;;;x
 c_asayita_adj;阿萨伊塔;;;;;;;;;;x
-c_begemder;比札姆德尔;;;;;;;;;;x
-c_begemder_adj;比札姆德尔;;;;;;;;;;x
+c_begemder;贝格姆德尔;;;;;;;;;;x
+c_begemder_adj;贝格姆德尔;;;;;;;;;;x
 d_wag;瓦格;;;;;;;;;;x
 d_wag_adj;瓦格;;;;;;;;;;x
 c_wag;瓦格;;;;;;;;;;x
