--- a/localisation/text2.csv
+++ b/localisation/text2.csv
@@ -43,7 +43,7 @@ EVTTOOLTIP73202;会听说我们的耐心.;;;;;;;;;;x
 EVTOPTC73201;我才是 [Root.PrimaryTitle.GetFullName] 说了算的人!;;;;;;;;;;x
 EVTDESC73202;我的领主 [From.GetBestName] 并不是很满意我作为 [Root.PrimaryTitle.GetFullName] 元帅的表现, 正在考虑撤换我..;;;;;;;;;;x
 EVTOPTA73202;我必须证明自己!;;;;;;;;;;x
-EVTOPTB73202;我该怎么办?;;;;;;;;;;x
+EVTOPTB73202;我能做什么?;;;;;;;;;;x
 EVTDESC73203;时间已经过的够久了, 我理当成为 [Root.PrimaryTitle.GetFullName] 的元帅, [Root.Liege.GetTitledFirstName] 会授予我元帅职位!;;;;;;;;;;x
 EVTOPTA73203;我急迫的期待[Root.Liege.GetHerHis]回音.;;;;;;;;;;x
 EVTTOOLTIP73204;会听取我们的申诉,希望他做出明智的决定;;;;;;;;;;x
@@ -1410,7 +1410,7 @@ EVTOPTC10032;这很……有趣?;;;;;;;;;;x
 EVTTOOLTIP10033;离开绿林好汉;;;;;;;;;;x
 EVTOPTD10032;是时候离开他们了;;;;;;;;;;x
 EVTNAME10033;离开绿林好汉;;;;;;;;;;x
-EVTDESC10033;在我和绿林好汉们一起冒险，吃烤鹿肉，还和一个穿绿斗篷女仆调情之后，我偷偷离开了他们.我和那些强盗们过得很愉快，这使我感觉到没有必要改变他们的生活，只要他们的恶作剧不会影响到我.他们似乎是无害的，只是满足于藏在他们的森林里，偶尔打劫一下富裕得不会在乎损失一点小钱的路人.;;;;;;;;;;x
+EVTDESC10033;在我和绿林好汉们一起冒险，吃烤鹿肉，还和一个穿绿斗篷侍女调情之后，我偷偷离开了他们.我和那些强盗们过得很愉快，这使我感觉到没有必要改变他们的生活，只要他们的恶作剧不会影响到我.他们似乎是无害的，只是满足于藏在他们的森林里，偶尔打劫一下富裕得不会在乎损失一点小钱的路人.;;;;;;;;;;x
 EVTOPTA10033;和他们道别!;;;;;;;;;;x
 EVTNAME10040;是时候做出选择了;;;;;;;;;;x
 EVTDESC10040;我要怎样对待那些绿林好汉和他们的头领?;;;;;;;;;;x
