--- a/localisation/v2_51.csv
+++ b/localisation/v2_51.csv
@@ -1,18 +1,18 @@
 #CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 TOOLTIP_DISALLOW_TRUE_COGNATIC;不允许男女平等继承法\n;;;;;;;;;;x
 TOOLTIP_ALLOW_TRUE_COGNATIC;允许男女平等继承法\n;;;;;;;;;;x
-opinion_powerful_vassal_not_voter;想要成为议会一员;;;;;;;;;;x
-REQUEST_SUPPORT_INTERACTION_TITLE;需要议会支持;;;;;;;;;;x
+opinion_powerful_vassal_not_voter;想要成为内阁成员;;;;;;;;;;x
+REQUEST_SUPPORT_INTERACTION_TITLE;需要内阁支持;;;;;;;;;;x
 ASK_TO_DECLARE_WAR_INTERACTION_TITLE;要求宣称;;;;;;;;;;x
 change_council_job_desc;如果你觉得§Y[Root.GetTitledName]§!更胜任另一份内阁的工作，你可以把[Root.GetHerHis]现今工作与另一个人交换。;;;;;;;;;;x
-IS_AFFECTED_BY_AN_ACTIVE_REALM_PEACE;处于境内休战的影响;;;;;;;;;;x
-IS_NOT_AFFECTED_BY_AN_ACTIVE_REALM_PEACE;不处于境内休战的影响;;;;;;;;;;x
-horse_death;马了个...毙了;;;;;;;;;;x
+IS_AFFECTED_BY_AN_ACTIVE_REALM_PEACE;处于境内和平的影响;;;;;;;;;;x
+IS_NOT_AFFECTED_BY_AN_ACTIVE_REALM_PEACE;不处于境内和平的影响;;;;;;;;;;x
+horse_death;胡闹;;;;;;;;;;x
 AIREASON_EXPANDING_HORDE;忙于征服世界，而你就是下一个目标！;;;;;;;;;;x
-HAS_LIEGE_ENFORCED_PEACE;$LIEGE|Y$已执行休战;;;;;;;;;;x
-HAS_LIEGE_ENFORCED_PEACE_NOT;$LIEGE|Y$尚未执行休战;;;;;;;;;;x
-WILL_LIEGE_ENFORCE_PEACE;$LIEGE|Y$将会执行休战;;;;;;;;;;x
-WILL_LIEGE_ENFORCE_PEACE_NOT;$LIEGE|Y$不会执行休战;;;;;;;;;;x
+HAS_LIEGE_ENFORCED_PEACE;$LIEGE|Y$已执行和平;;;;;;;;;;x
+HAS_LIEGE_ENFORCED_PEACE_NOT;$LIEGE|Y$尚未执行和平;;;;;;;;;;x
+WILL_LIEGE_ENFORCE_PEACE;$LIEGE|Y$将会执行和平;;;;;;;;;;x
+WILL_LIEGE_ENFORCE_PEACE_NOT;$LIEGE|Y$不会执行和平;;;;;;;;;;x
 INTERACTION_TYRANNY_AGAINST_COUNCIL;§R与内阁的意志相违背将会被视为一种暴君行为！§!;;;;;;;;;;x
 FORCE_JOIN_FACTION_INTERACTION_TITLE;请求加入派系;;;;;;;;;;x
 FORCE_JOIN_FACTION_INTERACTION_DESC;用一个§Y人情§!强迫§Y[Recipient.GetTitledFirstName]§!加入你的派系。;;;;;;;;;;x
@@ -28,40 +28,40 @@ IS_DE_FACTO_LIEGE;是事实领主;;;;;;;;;;x
 LEAVE_FACTION_COERCED;不能离开派系因为你是被威逼加入的;;;;;;;;;;x
 INVITE_FAVOR_MARRIED;$RECIPIENT|Y$必须是未婚;;;;;;;;;;x
 INVITE_FAVOR_LIEGE_RELATIVE;$RECIPIENT|Y$不能是$LIEGE|Y$的近亲;;;;;;;;;;x
-INVITE_FAVOR_JOB;$RECIPIENT|Y$不能有议会职位;;;;;;;;;;x
+INVITE_FAVOR_JOB;$RECIPIENT|Y$不能有内阁职位;;;;;;;;;;x
 AIREASON_LIEGE_HATE;恨他们的领主——§Y[GetTitledName]§!;;;;;;;;;;x
-ASK_REALM_PEACE_INTERACTION_TITLE;请求境内休战;;;;;;;;;;x
-ASK_REALM_PEACE_INTERACTION_DESC;用一个§Y人情§!请求你的领主执行§Y境内休战§!。;;;;;;;;;;x
+ASK_REALM_PEACE_INTERACTION_TITLE;请求境内和平;;;;;;;;;;x
+ASK_REALM_PEACE_INTERACTION_DESC;用一个§Y人情§!请求你的领主执行§Y境内和平§!。;;;;;;;;;;x
 ASK_REALM_PEACE_INTERACTION_LONG_DESC;你可以用§Y[Recipient.GetTitledFirstName]§!欠你§Y人情§!强迫他们开始执行§Y全境和平§!。;;;;;;;;;;x
-ASK_REALM_PEACE_INTERACTION_LETTER;\n为了让你还我的人情，我要求你在境内执行休战。;;;;;;;;;;x
-ASK_REALM_PEACE_INTERACTION_LETTER_GET;\n执行境内休战;;;;;;;;;;x
+ASK_REALM_PEACE_INTERACTION_LETTER;\n为了让你还我的人情，我要求你在境内执行和平。;;;;;;;;;;x
+ASK_REALM_PEACE_INTERACTION_LETTER_GET;\n执行境内和平。;;;;;;;;;;x
 ASK_REALM_PEACE_INTERACTION_ACCEPT_LOG;§Y[Actor.GetBestName]§!用§Y[Recipient.GetBestName]§!的人情强迫他们执行§Y全境和平§!。;;;;;;;;;;x
 ASK_COUNCIL_POSITION_INTERACTION_TITLE;索要议会职位;;;;;;;;;;x
 ASK_COUNCIL_POSITION_INTERACTION_DESC;用一个§Y人情§!跟你的领主索要一个§Y议会§!职位。;;;;;;;;;;x
 ASK_COUNCIL_POSITION_INTERACTION_LONG_DESC;你可以用§Y[Recipient.GetTitledFirstName]§!欠你§Y人情§!强迫他们在§Y内阁§!中授予你一个职位。;;;;;;;;;;x
 ASK_COUNCIL_POSITION_INTERACTION_LETTER;\n为了让你还我的人情，我要求你在议会中授予我一个合法的职位。;;;;;;;;;;x
-ASK_COUNCIL_POSITION_INTERACTION_LETTER_GET;\n作为你欠我的回报，授予我一个你议会中的职位。;;;;;;;;;;x
+ASK_COUNCIL_POSITION_INTERACTION_LETTER_GET;\n作为你欠我的回报，授予我一个你内阁中的职位。;;;;;;;;;;x
 ASK_COUNCIL_POSITION_INTERACTION_ACCEPT_LOG;§Y[Actor.GetBestName]§!用§Y[Recipient.GetBestName]§!的人情得到了$POSITION|Y$职位$FIRED$;;;;;;;;;;x
 COUNCIL_POSITION_FIRED;，与此同时$FIRED|Y$被解雇;;;;;;;;;;x
-coerced_into_council_position;被强迫授予了一个议会职位;;;;;;;;;;x
-DEMAND_POSITION_MUST_HAVE_POSITIONS;$RECIPIENT|Y$必须有$ACTOR|Y$可以胜任的§Y议会§!职位;;;;;;;;;;x
+coerced_into_council_position;被迫授予了内阁职位;;;;;;;;;;x
+DEMAND_POSITION_MUST_HAVE_POSITIONS;$RECIPIENT|Y$必须有$ACTOR|Y$可以胜任的§YCouncil§!职位;;;;;;;;;;x
 DEMAND_POSITION_CAN_HOLD_POSITION;$ACTOR|Y$可以担任$RECIPIENT|Y$的$POSITION|Y$;;;;;;;;;;x
-DEMAND_POSITION_MUST_CHOOSE_POSITION;$ACTOR|Y$必须选择一个§Y议会§!职位来请求$RECIPIENT|Y$;;;;;;;;;;x
-EVTDESC527;[This.GetTitledFirstName]任凭人情拖欠，拒绝了[From.GetTitledFirstName]在议会中担任[Title.GetName]的请求。;;;;;;;;;;x
+DEMAND_POSITION_MUST_CHOOSE_POSITION;$ACTOR|Y$必须选择一个§YCouncil§!职位来请求$RECIPIENT|Y$;;;;;;;;;;x
+EVTDESC527;[This.GetTitledFirstName]无视人情亏欠，拒绝了[From.GetTitledFirstName]在内阁中担任[Title.GetName]的请求。;;;;;;;;;;x
 EVTDESC528;[From.GetTitledFirstName]用了[This.GetTitledFirstName]欠下的人情[From.GetObjectPronoun]强迫境内休战。;;;;;;;;;;x
 EVTDESC529;[This.GetTitledFirstName]任凭人情拖欠，拒绝了[From.GetTitledFirstName]强迫境内休战的请求。;;;;;;;;;;x
 EVTDESC530;[From.GetTitledFirstName]用了[This.GetTitledFirstName]欠下的人情[From.GetObjectPronoun]强迫[This.GetTitledFirstName]加入他们的派系。;;;;;;;;;;x
 EVTDESC531;[This.GetTitledFirstName]任凭人情拖欠，拒绝了[From.GetTitledFirstName]加入[Actor.GetTitledFirstName]的派系。;;;;;;;;;;x
 HAS_FACTION_TO_JOIN;$ACTOR|Y$正在领导至少一个§Y派系§!;;;;;;;;;;x
 KINGDOM_LAW_DESC_CONCLAVE;王权法只有国王和皇帝才能通过，并关系到（实际上的）王国或帝国里每个人。;;;;;;;;;;x
-CAN_ENFORCE_PEACE;§Y境内休战§!可以被执行;;;;;;;;;;x
+CAN_ENFORCE_PEACE;§Y境内和平§!可以被执行;;;;;;;;;;x
 TOOLTIP_SoA_5357;这个选项可用是因为你的§Y欲望§!和§Y愤世嫉俗§!特质以及你高超的§Y密谋§!\n。;;;;;;;;;;x
 AIREASON_IS_A_THREAT;是个威胁;;;;;;;;;;x
 stutter_desc;此人口吃，严重影响与他人交流的能力。;;;;;;;;;;x
 EVTDESC1690;等我长大了，我会成为最最出色的统治者！;;;;;;;;;;x
-council_war_off_custom;议会成员可以自由加入派系\n;;;;;;;;;;x
-council_war_on_custom;议会成员只有当议会状态处于§R不满§!\n时才能加入派系，游牧和部落政体的议会成员随时可以加入派系;;;;;;;;;;x
-CROWN_LAW_CHANGE_TIMEOUT;§R议会最近拒绝了关于王权法的改革. 再次提议改革的时间为 $DATE$§!;;;;;;;;;;x
+council_war_off_custom;内阁成员可以自由加入派系\n;;;;;;;;;;x
+council_war_on_custom;内阁成员只有当处于§R不满§!\n状态时才能加入派系，游牧和部落政体的内阁成员随时可以加入派系;;;;;;;;;;x
+CROWN_LAW_CHANGE_TIMEOUT;§R内阁最近拒绝了关于王权法的改革。下次提议改革的时间为 $DATE$§!;;;;;;;;;;x
 ALLOW_MATRILINEAL_MARRIAGE_ON;允许入赘婚姻\n;;;;;;;;;;x
 ALLOW_MATRILINEAL_MARRIAGE_OFF;不允许入赘婚姻\n;;;;;;;;;;x
 LANDED_TITLE_BEING_CREATED;$TITLE$被创建;;;;;;;;;;x
@@ -83,7 +83,7 @@ ALLIANCE_BROKEN_SETUP;当联盟破裂时;;;;;;;;;;x
 ALLIANCE_BROKEN_LOG;$CHAR$与$ALLY$之间的联盟已经荡然无存;;;;;;;;;;x
 VOTE_AS_REQUESTOR_LOG;由于$REQUESTOR$请求支持，$CHARACTER|Y$在$LAW|Y$投了$VOTE$;;;;;;;;;;x
 VOTE_AS_REQUESTOR_SETUP;作为请求者在法律修改上投票并请求支持;;;;;;;;;;x
-ConclaveDLC;御前议会;;;;;;;;;;x
+ConclaveDLC;御前会议;;;;;;;;;;x
 UNDECIDED;未决;;;;;;;;;;x
 LOWER_RELATIVE_POWER_WITH_ALLIES;加上盟国的军队规模少于$OTHER|Y$与其盟国的$VAL|Y%$;;;;;;;;;;x
 HIGHER_RELATIVE_POWER_WITH_ALLIES;加上盟国的军队规模至少有$OTHER|Y$与其盟国的$VAL|Y%$;;;;;;;;;;x
@@ -91,6 +91,6 @@ FAVOR_INVITE;强制同意邀入宫廷的提案;;;;;;;;;;x
 FAVOR_JOIN_WAR;强迫同意军队召唤;;;;;;;;;;x
 FAVOR_EMBARGO;强迫同意要求禁运的提案;;;;;;;;;;x
 FAVOR_JOIN_FACTION;强迫某人加入你领导的派系;;;;;;;;;;x
-FAVOR_COUNCIL_POSITION;强迫你的领主授予你议会职位;;;;;;;;;;x
-FAVOR_PREVENT_ENFORCE_PEACE;阻止或强迫你的领主实行境内休战;;;;;;;;;;x
-CALL_IN_FAVOR_INTERACTION_TITLE;运用议会支持;;;;;;;;;;x
+FAVOR_COUNCIL_POSITION;强迫你的领主授予你内阁职位;;;;;;;;;;x
+FAVOR_PREVENT_ENFORCE_PEACE;阻止或强迫你的领主实行境内和平;;;;;;;;;;x
+CALL_IN_FAVOR_INTERACTION_TITLE;呼吁内阁支持;;;;;;;;;;x
