--- a/localisation/CombatUpdate.csv
+++ b/localisation/CombatUpdate.csv
@@ -1,5 +1,5 @@
 #CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
-MOVEMENT_SPEED;移动速度;;;;;;;;;;x
+MOVEMENT_SPEED;行军速度;;;;;;;;;;x
 EXPERIMENTALITY;战术几率;;;;;;;;;;x
 CU_LIGHT_INFANTRY;轻步兵;;;;;;;;;;x
 CU_HEAVY_INFANTRY;重步兵;;;;;;;;;;x
@@ -10,10 +10,10 @@ PURSUIT;追击;;;;;;;;;;x
 RETREAT;撤退;;;;;;;;;;x
 MARTIAL_INFLUENCE;战术影响;;;;;;;;;;x
 FLANKING;侧翼冲击;;;;;;;;;;x
-CENTER;领导中央阵列;;;;;;;;;;x
+CENTER;中军领袖;;;;;;;;;;x
 DEFENCE;防御;;;;;;;;;;x
-CANNOT_PLAY_MUSLIM_WITHOUT_DLC;没有伊斯兰之剑的DLC，你不能扮演穆斯林;;;;;;;;;;x
+CANNOT_PLAY_MUSLIM_WITHOUT_DLC;没有伊斯兰之剑DLC，你不能扮演穆斯林领主。;;;;;;;;;;x
 NOT_ALLOWED_MUSLIM;没有伊斯兰之剑的DLC，你不能扮演§Y穆斯林§!！;;;;;;;;;;x
 NOT_ALLOWED_MUSLIM_MP;§Y$PLAYER$§!没有伊斯兰之剑的DLC，你不能扮演§Y穆斯林§!;;;;;;;;;;x
-RD_NOT_PLAYABLE_WITHOUT_MUSLIM_DLC;没有伊斯兰之剑的DLC，你不能扮演穆斯林;;;;;;;;;;x
+RD_NOT_PLAYABLE_WITHOUT_MUSLIM_DLC;没有伊斯兰之剑DLC，你不能扮演穆斯林领主。;;;;;;;;;;x
 MUST_SELECT_PLAYER;必须选择一个人物!;;;;;;;;;;x
