--- a/localisation/v1_08.csv
+++ b/localisation/v1_08.csv
@@ -12,10 +12,10 @@ FORBIDDEN_LEAD;这位廷臣现在被禁止带领军队.\n§G允许其领军§!;;
 DEMAND_RELIGIOUS_CONVERSION_INTERACTION_0;§Y[Recipient.GetFirstName] 将从监狱被释放.，如果[Recipient.GetSubjectPronoun] 同意§!;;;;;;;;;;x
 opinion_fought_for_claimant;为宣称权而战;;;;;;;;;;x
 EVTOPTD9001;礼貌的询问.;;;;;;;;;;x
-EVTDESC9003;亲爱的 [Root.GetTitle],\n\n我已经知道在我的领地内有某些派系正在破坏我的统治. 如果你参与了或者打算这么做, 我相信你现在会打消这个念头.\n\n署名,\n[From.GetTitledName];;;;;;;;;;x
+EVTDESC9003;亲爱的 [Root.GetTitle]，\n\n我已经知道在我的领地内有某些派系正在破坏我的统治。如果你参与了或者打算这么做，我相信你现在会打消这个念头。\n\n此致，\n[From.GetTitledName];;;;;;;;;;x
 EVTOPTA9003;最好不要冒这个险...;;;;;;;;;;x
 EVTOPTB9003;哈! 这封信是一个绝望的表现.;;;;;;;;;;x
 EVTTOOLTIP9023;你送出了一封礼貌的请求书.;;;;;;;;;;x
-EVTDESC9027;尊敬的 [Root.GetTitle],\n\n你好! 我不喜欢这个, 但是为了国家的兴盛, 我将会支持你所有的派系. 不要让我后悔自己的决定.\n\n署名,\n[From.GetTitledName];;;;;;;;;;x
+EVTDESC9027;尊敬的 [Root.GetTitle],\n\n你好！我不喜欢这个，但是为了国家的兴盛，我将会支持你所有的派系。不要让我后悔自己的决定。\n\n此致，\n[From.GetTitledName];;;;;;;;;;x
 DATA_COLLECTION_AGREEMENT;你愿意通过收集有关游戏习惯和可下载内容及MOD的受欢迎程度的资料来帮助我们完善王国风云2么如果你同意，你对王国风云2的操作行为将会在你游戏时以不记名的形式发给P社.P社不会，也不能通过这些材料来获取使用者的私人信息.;;;;;;;;;;x
 DATA_COLLECTION_TITLE;帮助我们改进王国风云II？;;;;;;;;;;x
