--- a/localisation/v2_62.csv
+++ b/localisation/v2_62.csv
@@ -31,7 +31,7 @@ RIP.30300.title.b;收到一封字迹潦草的信;;;;;;;;;;x
 RIP.30300.d.highlander;你收到消息说，另一个永生者，拉米雷兹，正在寻找你。这个西班牙人听说你永生不朽，发誓要了结你。虽然动机不明，但他意图明确，找到你不过是时间问题。;;;;;;;;;;x
 RIP.30300.d.evildude;你听说了一个怪物般的男人。这个残忍的生物，人称乌兰，也是个永生者，把无限的生命用来以他所能想象的最可怕的方式凌虐他人。有流言说他的残忍是因为内心充满嫉妒，世上还有一个永生者的消息气得他七窍生烟。如果这些流言可信，他肯定会追踪你，并早晚尝试杀死你……;;;;;;;;;;x
 RIP.30300.d.goodguy;最近你听说了另一个永生者，亚瑟。这位美德典范般的男人似乎全身心帮助他人并纠正错误。这样的生活似乎很无聊，但你觉得，谁没点爱好呢？你从未觉得自己是个坏人，或许偶尔有些调皮，但亚瑟似乎对你有某种怨恨，提到过“结束恐怖统治”、“停止无穷血腥”这样的词句。这就太过分了。;;;;;;;;;;x
-RIP.30300.d.shieldmaiden;诗人咏唱一位叫做托尔希德的盾女，又或者是在凡间行走的女武神。不管怎样，据说她也是永生者，在战场上光耀四方。在最著名的民歌中，她最伟大的决斗是与一位叫凯恩的永生者展开的，她取胜之后为再也无法找到这样相称的对手而哭泣。如果这故事是真的，她可能也会找到你，挑起决斗。;;;;;;;;;;x
+RIP.30300.d.shieldmaiden;诗人咏唱一位叫做托尔希德的盾娘，又或者是在凡间行走的女武神。不管怎样，据说她也是永生者，在战场上光耀四方。在最著名的民歌中，她最伟大的决斗是与一位叫凯恩的永生者展开的，她取胜之后为再也无法找到这样相称的对手而哭泣。如果这故事是真的，她可能也会找到你，挑起决斗。;;;;;;;;;;x
 RIP.30300.d.horse;虽然笔迹粗暴，但你好奇地注意到，信中的遣词造句显示这可能是一位相当聪明的作者：\n'我向来鄙视东施效颦之徒，尤其是招摇过市、引发我族关注者。我将追逐觅踪，你必无路可逃。我将把你的城市烧成白地，它并非第一座；我会屠灭你的领民、践踏你的遗产，此前更强大的人也未能幸免。历史将如此记述你：骄傲愚蠢，自寻死路的的疯子。在战栗中等待我吧。”\n信上没有签名。;;;;;;;;;;x
 RIP.30300.a;把他们带上来！;;;;;;;;;;x
 RIP.30300.b;我不喜欢这声音！;;;;;;;;;;x
@@ -211,12 +211,12 @@ EVTOPTA_RIP_30200_TOOLTIP;你一场决斗中挑战你的仇敌§Y[suicide_duel_t
 EVTOPTB_RIP_30200;饮毒自尽是最美好的解脱。;;;;;;;;;;x
 EVTOPTC_RIP_30200;希望绞索能给我一个快速无痛的死亡。;;;;;;;;;;x
 EVTOPTD_RIP_30200;城堡最高处的阳台至少能让我在最后的时刻再看一眼我的领地。;;;;;;;;;;x
-EVTDESC_RIP_30202;致[GetFromRootInsult][Root.GetBestName]，\n你的存在污染这个的世界太久了，一个月之内我将与你在[From.Location.GetName]进行一场光明正大的决斗。带上你的剑，或者像一个没有荣誉可言的懦夫逃走。我们之中只有一个人能活着离开。\n\n署名，[From.GetBestName];;;;;;;;;;x
+EVTDESC_RIP_30202;致[GetFromRootInsult][Root.GetBestName]，\n你的存在污染这个的世界太久了，一个月之内我将与你在[From.Location.GetName]进行一场光明正大的决斗。带上你的剑，或者像一个没有荣誉可言的懦夫逃走。我们之中只有一个人能活着离开。\n\n此致，[From.GetBestName];;;;;;;;;;x
 EVTOPTA_RIP_30202;我要取[GetFromRootInsult]的项上人头！;;;;;;;;;;x
 EVTOPTB_RIP_30202;不，这太危险了……;;;;;;;;;;x
-EVTDESC_RIP_30203;致[GetFromRootInsult][Root.GetBestName]，\n我很愿意将你这个肮脏下流的脓包从这个世界上清除。快去办好后事吧，我不会手下留情的。\n\n署名，[From.GetBestName];;;;;;;;;;x
+EVTDESC_RIP_30203;致[GetFromRootInsult][Root.GetBestName]，\n我很愿意将你这个肮脏下流的脓包从这个世界上清除。快去办好后事吧，我不会手下留情的。\n\n此致，[From.GetBestName];;;;;;;;;;x
 EVTOPTA_RIP_30203;我正将[From.GetSheHeCap]玩弄在鼓掌之中。;;;;;;;;;;x
-EVTDESC_RIP_30204;致[GetFromRootInsult][Root.GetBestName]，\n我既没时间也不想迁就你去沉浸在你可悲的过去时光中。难道你就没有类似管理你的领地之类的正事可干吗？\n\n署名 [From.GetBestName];;;;;;;;;;x
+EVTDESC_RIP_30204;致[GetFromRootInsult][Root.GetBestName]，\n我既没时间也不想迁就你去沉浸在你可悲的过去时光中。难道你就没有类似管理你的领地之类的正事可干吗？\n\n此致， [From.GetBestName];;;;;;;;;;x
 EVTOPTA_RIP_30204;那个可恶的胆小鬼……;;;;;;;;;;x
 EVTOPTA_RIP_30204_TOOLTIP;你试图自尽的企图失败了，你没准还会在合适的时机继续尝试自杀……\n;;;;;;;;;;x
 EVTDESC_RIP_30205_LOST;[suicide_duel_target.GetTitledFirstName]真好骗。[suicide_duel_target.GetSheHeCap]太过渴求你的鲜血，[suicide_duel_target.GetSheHe]都没注意到你故意软弱无力地防御自己。没几下[suicide_duel_target.GetHerHis]利刃就找到了你的喉下凹陷。;;;;;;;;;;x
